[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rtclient"
authors = [
    {name = "Praneeth Karempudi", email = "praneeth.karempudi@gmail.com"},
]
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT-License"}
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy",
    "requests",
    "pyside6",
    "qtpy",
    "pycromanager",
    "torch",
    "torchvision",
    "docker",
    "matplotlib",
]

[project.optional-dependencies]
linting = ["mypy", "ruff", "pre-commit"]
testing = ["pytest"]
typing = []
cpu=[]
gpu=[]

[tool.setuptools.packages]
find = {}

[project.scripts]
rtclient-app = "rtclient.app:run"


[tool.pyright.defineConstant]
PYQT5 = false
PYSIDE2 = false
PYQT6 = false
PYSIDE6 = true

[tool.ruff.per-file-ignores]
"rtclient/ui/qt_ui_classes/ui_main.py" = ["F401"]
"rtclient/ui/qt_ui_classes/ui_positions.py" = ["F401"]